@@ -31,6 +31,7 @@ Interactive demo scripts are not included on this page.
     <li><a href="pointsize.html">variable size points</a></li>
     <li><a href="param.html">parametric&nbsp;functions</a></li>
     <li><a href="vector.html">vector fields</a></li>
+    <li><a href="circles.html">circles</a></li>
     </ul>
 
     <h4>Math functions and<br> curve fitting</h4>
